fix buttons on tablet

--- a/src/Pages/Projects-Page/ProjectsPageStyling.scss
+++ b/src/Pages/Projects-Page/ProjectsPageStyling.scss
@@ -77,7 +77,7 @@
       z-index: 1;
       color: white;
       border-radius: 20px;
-      width: 50%;
+      width: 60%;
       height: 5%;
       margin: auto;
       padding: .4em;
